--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          go-version: 1.21
       - name: Set up Go
         uses: actions/setup-go@v4
       - name: Run GoReleaser
