--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          go-version: 1.21
       - name: Set up Go
         uses: actions/setup-go@v4
+        with:
+          go-version: 1.21
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
